Implement MVP agents-as-tools orchestration: Delivery → Jira → Planning agents